ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # adds 301 redirect with trailing slash
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/dashboard/ permanent;
spec:
#   tls:
#   - hosts:
#     - dashboard.domain.tld
  rules:
#   - host: dashboard.domain.tld
    - http:
        paths:
        - path: /dashboard
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
